@@ -4,6 +4,8 @@
   ** Add `/space/leave` route.
 * Frontend
   ** Add a new button leave a space when you already are a member.
+* Database
+  ** Add new column `password_hash` to the `space` table.
 
 == `0.0.3.0`
 
